--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<body>
-  <nav id='nav'>
-    <img class="img-responsive" style=" float:left; height:50px;"  src="/assets/images/output-onlinepngtools.png" alt="HiveHub">
-    <ul>
-    	<li><a routerLink="/dashboard">Home</a></li>
-    	<li><a routerLink="/lunch">Lunch</a></li>
-    	<li><a href="#section1" >Hivemind Leaders</a></li>
-    	<li><a href="#section2" >Activities</a></li>
-    	<li><a href="#section3" >Helpful Info</a></li>
-    	<li><a href="#section4" >Legends</a></li>
-    </ul>
-  </nav>
-  <router-outlet></router-outlet>
-</body>
+<nav id='nav'>
+  <img class="img-responsive" src="/assets/images/output-onlinepngtools.png" alt="HiveHub">
+  <ul>
+    <li><a routerLink="/dashboard">Home</a></li>
+    <li><a routerLink="/lunch">Lunch</a></li>
+    <li><a href="#section1">Hivemind Leaders</a></li>
+    <li><a href="#section2">Activities</a></li>
+    <li><a href="#section3">Helpful Info</a></li>
+    <li><a href="#section4">Legends</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
