--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,10 +8,6 @@ h2 {
   margin-top: 0;
   padding-top: 0;
 }
-body {
-  margin: 0;
-  width: 100%;
-}
 app-dashboard {
   position: absolute;
   width: 100%;
@@ -39,6 +35,11 @@ nav {
   background: #d34836;
   -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
   transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
+
+  img {
+    float: left;
+    height: 50px;
+  }
 
   ul {
     position: fixed;
