--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@ nav {
   top: 0;
   left: 0;
   z-index: 100;
-  background: #d34836;
+  background: linear-gradient(#646f7f, #4a5564);
   -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
   transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
 
