--- a/src/app/lunch/lunch.component.css
+++ b/src/app/lunch/lunch.component.css
@@ -145,7 +145,7 @@
   /* CONTENT
      ================================================================== */
   section {
-    height: 100vh;
+    padding-bottom: 250px;
   }
   section h1,
   section h2 {
@@ -159,7 +159,7 @@
     -webkit-animation: float-in-left 0.45s ease;
     animation: float-in-left 0.45s ease;
   }
-  
+
 .list {
     display:block;
     width: 50%;
@@ -198,9 +198,9 @@
     opacity: 1;
   }
 
-  
 
-  
+
+
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
