--- a/src/app/lunch/lunch.component.scss
+++ b/src/app/lunch/lunch.component.scss
@@ -4,17 +4,8 @@
    ====================================================== */
 /* LOOP FOR COLORING SECTIONS
    ================================================================== */
-   #section1 {
-    background-color: #d34836;
-  }
-  #section2 {
-    background-color: #009688;
-  }
-  #section3 {
-    background-color: #ffa000;
-  }
-  #section4 {
-    background-color: #5677fc;
+  #section1 {
+    background: linear-gradient(200deg, #a356b1, #3386b1);
   }
   #myModal {
     color: #4CAF50;
@@ -106,51 +97,15 @@
     max-width: 700px;
     margin: 0 auto;
   }
-  /* DYNAMIC NAVIGATION BAR
-     ================================================================= */
-  nav {
-    position: fixed;
-    width: 100%;
-    top: 50;
-    -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-    transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-  }
-  nav:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-  nav ul {
-    position: relative;
-    margin: 0;
-    z-index: 2;
-    text-align: center;
-  }
-  nav ul li {
-    display: inline-block;
-    padding: 1.35em 0;
-    margin-right: 3em;
-    font-size: 0.9em;
-  }
-  nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 0.9em;
-  }
   /* CONTENT
      ================================================================== */
   section {
-    padding-bottom: 250px;
+    padding-bottom: 350px;
   }
   section h1,
   section h2 {
     margin: 0;
-    color: rgba(255, 255, 255, 0.9);
+    color: #333;
     text-align: center;
     -webkit-animation: float-in-right 0.45s ease;
     animation: float-in-right 0.45s ease;
@@ -165,41 +120,43 @@
     width: 50%;
     text-align:center;
     margin: auto;
-    background-color: #5677fc
+    background-color: #5677fc;
+
+    ul {
+        list-style: none;
+        margin: 0;
+        margin-top:2em;
+        padding: 0;
+
+        li {
+          background: #fff;
+          height: 40px;
+          color: #666;
+          line-height: 40px;
+          padding: 0 20px 0 0;
+
+          a {
+            text-decoration: none;
+            color: #666;
+          }
+
+          a:nth-child(2n) {
+            color:white;
+            background: #5677fc;
+          }
+        }
+
+        li:nth-child(2n) {
+          color:white;
+          background: #5677fc;
+        }
+
+        li:hover a {
+          width: 40px;
+          opacity: 1;
+        }
+      }
 }
-
-.list ul {
-    list-style: none;
-    margin: 0;
-    margin-top:2em;
-    padding: 0;
-  }
-  .list ul li {
-    background: #fff;
-    height: 40px;
-    color: #666;
-    line-height: 40px;
-    padding: 0 20px 0 0;
-  }
-  .list ul li a {
-    text-decoration: none;
-    color: #666;
-  }
-  .list ul li:nth-child(2n) {
-    color:white;
-    background: #5677fc;
-  }
-  .list ul li a:nth-child(2n) {
-    color:white;
-    background: #5677fc;
-  }
-  .list ul li:hover a {
-    width: 40px;
-    opacity: 1;
-  }
-
-
-
 
 * {
   -moz-box-sizing: border-box;
@@ -213,7 +170,7 @@ body {
 
 table {
   border-collapse: separate;
-  background: #fff;
+  background: #ddd;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
@@ -340,11 +297,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .lunch-heading {
-  line-height: 10;
+  padding-top: 100px;
+  font-size: 30pt;
 }
 
 .noms {
-  margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
