Converting to components and routing changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <nav id='nav'>
   <img class="img-responsive" src="/assets/images/output-onlinepngtools.png" alt="HiveHub">
   <ul>
-    <li><a routerLink="/dashboard">Home</a></li>
+    <li><a routerLink="/dashboard" onclick="window.scrollTo({left: 0, top: 0, behavior: 'smooth'})">Home</a></li>
     <li><a routerLink="/lunch">Lunch</a></li>
-    <li><a href="#section1">Hivemind Leaders</a></li>
-    <li><a href="#section2">Activities</a></li>
-    <li><a href="#section3">Helpful Info</a></li>
-    <li><a href="#section4">Legends</a></li>
+    <li><a routerLink="/dashboard" onclick="window.scrollTo({left: 0, top: 0, behavior: 'smooth'})">Hivemind Leaders</a></li>
+    <li><a routerLink="/dashboard" onclick="window.scrollTo({left: 0, top: 772-50, behavior: 'smooth'})">Activities</a></li>
+    <li><a routerLink="/dashboard" onclick="window.scrollTo({left: 0, top: 772+527-50, behavior: 'smooth'})">Helpful Info</a></li>
+    <li><a routerLink="/dashboard" onclick="window.scrollTo({left: 0, top: 838+772+527-50, behavior: 'smooth'})">Legends</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
