--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,98 +1,6 @@
-<section id="section1">
-  <h1>Hivemind Leaders</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Role</th>
-        <th>Name</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Hive Lord</td>
-        <td>Royce Nettles</td>
-        <td>royce.nettles@adtran.com</td>
-      </tr>
-      <tr>
-        <td>Lunch Captain</td>
-        <td>Alex "Lee" Ward</td>
-        <td>alex.ward@adtran.com</td>
-      </tr>
-      <tr>
-        <td>Game Master</td>
-        <td>Ben Williams</td>
-        <td>benjamin.williams@adtran.com</td>
-      </tr>
-      <tr>
-        <td>Trivia Captain</td>
-        <td>Gary Pike</td>
-        <td>gary.pike@adtran.com</td>
-      </tr>
-      <tr>
-        <td>Frosbee Captain</td>
-        <td>Jack Missildine</td>
-        <td>jack.missildine@adtran.com</td>
-      </tr>
-      <tr>
-        <td>Volleyball Captain</td>
-        <td>Chris Stidham</td>
-        <td>chris.stidham@adtran.com</td>
-      <tr>
-        <td>Ping Pong Captain</td>
-        <td>Brandon Tucker</td>
-        <td>brandon.tucker@adtran.com</td>
-      </tr>
-    </tbody>
-  </table>
+<leaders></leaders>
 
-
-</section>
-
-<section id="section2">
-  <h2>Activities</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Day</th>
-        <th>Activity</th>
-        <th>Location</th>
-        <th>Contact</th>
-        <th>Weather</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Monday</td>
-        <td>Volleyball</td>
-        <td>South Tower Lawn</td>
-        <td>chris.stidham@adtran.com</td>
-        <td><a href="https://weather.com/weather/hourbyhour/l/USAL0287:1:US">View Local Weather</a></td>
-      </tr>
-      <tr>
-        <td>Tuesday</td>
-        <td>Frosbee</td>
-        <td>South Tower Lawn</td>
-        <td>jack.missildine@adtran.com</td>
-        <td><a href="https://weather.com/weather/hourbyhour/l/USAL0287:1:US">View Local Weather</a></td>
-      </tr>
-      <tr>
-        <td>Wednesday</td>
-        <td>Game Night</td>
-        <td>Floating locations</td>
-        <td>benjamin.williams@adtran.com</td>
-        <td><a href="https://weather.com/weather/hourbyhour/l/USAL0287:1:US">View Local Weather</a></td>
-      </tr>
-      <tr>
-        <td>Flexible Day</td>
-        <td>Trivia</td>
-        <td>Floating locations</td>
-        <td>gary.pike@adtran.com</td>
-        <td><a href="https://weather.com/weather/hourbyhour/l/USAL0287:1:US">View Local Weather</a></td>
-      </tr>
-    </tbody>
-  </table>
-</section>
+<activities></activities>
 
 <section id="section3">
   <h2>Your source for all things co-op!</h2>
