--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,7 @@ nav:before {
   height: 100%;
   z-index: 1;
 }
-#nav {
+nav {
   position: fixed;
   width: 100%;
   line-height: 50%;
@@ -52,15 +52,18 @@ nav:before {
 
     li {
       display: inline-block;
-      padding: 1.35em 0;
-      margin-right: 1.5em;
-      margin-left: 1.5em;
+      padding: 0 1.5em;
       font-size: 0.9em;
+      height: 50px;
+      line-height: 50px;
+      z-index: 300;
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+      outline: 0;
 
-      a {
-        text-decoration: none;
-        color: #fff;
-        font-size: 0.9em;
+      &:hover {
+        background: #556497;
       }
     }
   }
