--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -105,69 +105,11 @@
     max-width: 700px;
     margin: 0 auto;
   }
-  /* DYNAMIC NAVIGATION BAR
-     ================================================================= */
-  app-dashboard {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    z-index: 0;
-  }
-  nav {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    background: #d34836;
-    -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-    transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-  }
-  nav:before {
-    content: "";
-    display: block;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.27);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-  nav ul {
-    position: fixed;
-    margin: 0;
-    z-index: 200;
-    width: 100%;
-    left: -40px;
-    text-transform: uppercase;
-    text-align: center;
-  }
-  nav ul li {
-    display: inline-block;
-    padding: 1.35em 0;
-    margin-right: 1.5em;
-    margin-left: 1.5em;
-    font-size: 0.9em;
-  }
-  nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 0.9em;
-  }
   /* CONTENT
      ================================================================== */
   section {
     height: auto;
     padding-bottom: 1px;
-  }
-  section h1 {
-    font-size: 30pt;
-    margin: 0;
-    color: rgba(255, 255, 255, 0.9);
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 100px;
-    -webkit-animation: float-in-right 0.45s ease;
-    animation: float-in-right 0.45s ease;
   }
   section h2 {
     font-size: 30pt;
@@ -285,6 +227,10 @@ tbody tr td {
   font-size: 16px;
   padding: 20px 20px 20px 20px;
   border-bottom: 1px solid #e0e0e0;
+}
+
+tbody tr td a {
+  padding: 20px;
 }
 
 tbody tr:nth-child(2n) {
