--- a/src/app/help-page/help-page.component.css
+++ b/src/app/help-page/help-page.component.css
@@ -1,26 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Patua+One|Open+Sans);
 
-/* VARS
-   ====================================================== */
-/* LOOP FOR COLORING SECTIONS
-   ================================================================== */
-   #section1 {
-    background-color: #d34836;
-  }
-  #section2 {
-    background-color: #009688;
-  }
-  #section3 {
-    background-color: #ffa000;
-  }
-  #section4 {
-    background-color: #5677fc;
-  }
-  #myModal {
-    color: #4CAF50;
-  }
-  /* MIXINS
-     ================================================================== */
   /* KEYFRAMES
      ================================================================== */
   @-webkit-keyframes fade-in {
@@ -87,61 +66,6 @@
       transform: translate3d(0, 0, 0);
     }
   }
-  /* BASE
-     ================================================================= */
-  html {
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  body {
-    font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    line-height: 2.35;
-    color: rgba(255, 255, 255, 0.85);
-    margin: 0;
-  }
-  p {
-    padding-top: 3em;
-    max-width: 700px;
-    margin: 0 auto;
-  }
-  /* DYNAMIC NAVIGATION BAR
-     ================================================================= */
-  nav {
-    position: fixed;
-    width: 100%;
-    top: 50;
-    -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-    transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
-  }
-  nav:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-  nav ul {
-    position: relative;
-    margin: 0;
-    z-index: 2;
-    text-align: center;
-  }
-  nav ul li {
-    display: inline-block;
-    padding: 1.35em 0;
-    margin-right: 3em;
-    font-size: 0.9em;
-  }
-  nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 0.9em;
-  }
   /* CONTENT
      ================================================================== */
   section {
@@ -159,7 +83,7 @@
     -webkit-animation: float-in-left 0.45s ease;
     animation: float-in-left 0.45s ease;
   }
-  
+
 .list {
     display:block;
     width: 50%;
@@ -198,17 +122,26 @@
     opacity: 1;
   }
 
-  
 
-  
+
+
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-body {
-  background: #353a40;
+#helpPage {
+  background: #79c;
+  padding-bottom: 50px;
+}
+
+h1 {
+  padding-top: 100px;
+  margin-top: 0;
+  margin-bottom: 50px;
+  text-align: center;
+  color: #eee;
 }
 
 table {
@@ -260,7 +193,7 @@ tbody tr td {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: #5f6062;
-  font-size: 13px;
+  font-size: 16px;
   padding: 20px 20px 20px 20px;
   border-bottom: 1px solid #e0e0e0;
 }
@@ -283,20 +216,20 @@ tbody tr:last-child td:last-child {
   border-bottom-right-radius: 5px;
 }
 
-tbody:hover > tr td {
+/*tbody:hover > tr td {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
-  opacity: 0.5;
+  opacity: 0.5;*/
   /* uncomment for blur effect */
   /* color:transparent;
   @include text-shadow(0px 0px 2px rgba(0,0,0,0.8));*/
-}
+/*}*/
 
-tbody:hover > tr:hover td {
+/*tbody:hover > tr:hover td {
   text-shadow: none;
   color: #2d2d2d;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
-}
+}*/
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
