--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,10 +7,10 @@
 
   <table>
     <tbody>
-      <tr><td><a href="https://confluence.adtran.com/display/COOP/Onboarding">Confluence Onboarding</a></td></tr>
-      <tr><td><a href="https://confluence.adtran.com/display/COOP/Acronyms">Acronyms</a></td></tr>
-      <tr><td><a routerLink="/help-page">ADTRAN Learning Network</a></td></tr>
-      <tr><td><a href="https://docs.google.com/spreadsheets/d/12QOl6XmhExjuD_iSQ3TaADtJLSnenzu20MzQZo5txOs/edit?usp=sharing">Co-Op Contact Sheet</a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/display/COOP/Onboarding"><div>Confluence Onboarding</div></a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/display/COOP/Acronyms"><div>Acronyms</div></a></td></tr>
+      <tr><td><a routerLink="/help-page"><div>ADTRAN Learning Network</div></a></td></tr>
+      <tr><td><a href="https://docs.google.com/spreadsheets/d/12QOl6XmhExjuD_iSQ3TaADtJLSnenzu20MzQZo5txOs/edit?usp=sharing"><div>Co-Op Contact Sheet</div></a></td></tr>
     </tbody>
   </table>
   <table>
@@ -20,10 +20,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td><a href="https://confluence.adtran.com/display/VirtDevEnv/Sienna+Minivan+User+Guide"> Download Sienna Minivan</a></td></tr>
-      <tr><td><a href="https://confluence.adtran.com/display/ComCoreSw/Service+Kit+-+Getting+Started"> Setup Perforce and Docker</a></td></tr>
-      <tr><td><a href="https://confluence.adtran.com/pages/viewpage.action?pageId=15477240"> Setup Perforce for Ubuntu</a></td></tr>
-      <tr><td><a href="https://confluence.adtran.com/display/~mhumes/Printing+on+Ubuntu+16.04"> Setup Printing on Ubuntu</a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/display/VirtDevEnv/Sienna+Minivan+User+Guide"><div>Download Sienna Minivan</div></a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/display/ComCoreSw/Service+Kit+-+Getting+Started"><div>Setup Perforce and Docker</div></a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/pages/viewpage.action?pageId=15477240"><div>Setup Perforce for Ubuntu</div></a></td></tr>
+      <tr><td><a href="https://confluence.adtran.com/display/~mhumes/Printing+on+Ubuntu+16.04"><div>Setup Printing on Ubuntu</div></a></td></tr>
     </tbody>
   </table>
 </section>
@@ -33,8 +33,8 @@
   <body>
     <table>
       <tbody>
-        <tr><td><a routerLink="/legend">Legend of the Time Cards</a></td></tr>
-        <tr><td><a routerLink="/legend-robert">Legend of Robert!</a></td></tr>
+        <tr><td><a routerLink="/legend"><div>Legend of the Time Cards</div></a></td></tr>
+        <tr><td><a routerLink="/legend-robert"><div>Legend of Robert!</div></a></td></tr>
       </tbody>
     </table>
   </body>
