Added pic slider to nomination card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,9 @@
   </ul>
 </nav>
 <router-outlet></router-outlet>
+
+<!--<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <img class="img-responsive" src="/assets/images/output-onlinepngtools.png" alt="HiveHub">
+  </mat-toolbar-row>
+</mat-toolbar>-->
